使用 Colaboratory 创建

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5WQPFhUe6aAHlkZ0fgzPo",
+      "authorship_tag": "ABX9TyNH8rE7oJy6lYRXfBnxuCb9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,6 +50,24 @@
       ],
       "metadata": {
         "id": "nS9UM1hoFizF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create SparkSession\n",
+        "spark = SparkSession.builder \\\n",
+        "    .appName(\"Read JSON File\") \\\n",
+        "    .getOrCreate()\n",
+        "\n",
+        "# Read Json file\n",
+        "df = spark.read.json(\"path/to/json/file.json\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "AcIZ1cyMJPs0"
       },
       "execution_count": null,
       "outputs": []
