--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPI1L8qitmrrT+YQgP2SAgs",
+      "authorship_tag": "ABX9TyNZlNPcZepgme85ZT3jcTbP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7vgGYzsiFZyE",
-        "outputId": "378e42ad-ea0c-46f3-f5a1-b536294ba134"
+        "outputId": "a89374e5-a353-4c23-886f-ca71ab27541b"
       },
       "outputs": [
         {
@@ -44,12 +44,12 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark\n",
             "  Downloading pyspark-3.4.1.tar.gz (310.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m310.8/310.8 MB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m310.8/310.8 MB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
             "Building wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.4.1-py2.py3-none-any.whl size=311285398 sha256=da15c9fc332021504cb8f7566fadae7ef2ba6429b7afe4795e43f29bfd068488\n",
+            "  Created wheel for pyspark: filename=pyspark-3.4.1-py2.py3-none-any.whl size=311285398 sha256=58a048cb2f4174c3228d14b19732369f973ae82dd4e2833f5ca12c8d46e3911d\n",
             "  Stored in directory: /root/.cache/pip/wheels/0d/77/a3/ff2f74cc9ab41f8f594dabf0579c2a7c6de920d584206e0834\n",
             "Successfully built pyspark\n",
             "Installing collected packages: pyspark\n",
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "nS9UM1hoFizF"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -135,24 +135,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AcIZ1cyMJPs0",
-        "outputId": "8a74b089-a9b8-4c11-f21e-e26ec62410c2"
+        "outputId": "c5929dab-25e3-4649-fbbd-3caa92ea1d12"
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-06-27 14:36:19--  https://raw.githubusercontent.com/ZwL6/MZT/main/cities.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2023-06-27 14:53:38--  https://raw.githubusercontent.com/ZwL6/MZT/main/cities.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 15829 (15K) [text/plain]\n",
-            "Saving to: ‘cities.json.2’\n",
+            "Saving to: ‘cities.json’\n",
             "\n",
-            "\rcities.json.2         0%[                    ]       0  --.-KB/s               \rcities.json.2       100%[===================>]  15.46K  --.-KB/s    in 0.001s  \n",
+            "\rcities.json           0%[                    ]       0  --.-KB/s               \rcities.json         100%[===================>]  15.46K  --.-KB/s    in 0s      \n",
             "\n",
-            "2023-06-27 14:36:19 (20.4 MB/s) - ‘cities.json.2’ saved [15829/15829]\n",
+            "2023-06-27 14:53:39 (72.9 MB/s) - ‘cities.json’ saved [15829/15829]\n",
             "\n"
           ]
         }
@@ -215,8 +215,92 @@
       "metadata": {
         "id": "qj8cYyhKSHBl"
       },
-      "execution_count": 28,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Download routes\n",
+        "from google.colab import files\n",
+        "\n",
+        "files.download('routes.json')\n"
+      ],
+      "metadata": {
+        "id": "uNZs3ShmVCAl",
+        "outputId": "6dd5ecc9-b012-4652-d44d-45a2cb0914aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_ac08f180-a42c-4d4d-a71b-f6bd382241fb\", \"routes.json\", 622844)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
