使用 Colaboratory 创建

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZlNPcZepgme85ZT3jcTbP",
+      "authorship_tag": "ABX9TyOk38zOPSNGJodNU4LcbJPJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,12 +161,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Read Json file\n",
-        "df = spark.read.json(\"cities.json\")\n",
-        "\n",
+        "#making standerd route\n",
         "import json\n",
         "import random\n",
         "\n",
+        "# Set seed\n",
+        "random.seed(1)\n",
         "with open('cities.json', 'r') as file:\n",
         "    data = json.load(file)\n",
         "\n",
@@ -215,7 +215,7 @@
       "metadata": {
         "id": "qj8cYyhKSHBl"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -228,13 +228,13 @@
       ],
       "metadata": {
         "id": "uNZs3ShmVCAl",
-        "outputId": "6dd5ecc9-b012-4652-d44d-45a2cb0914aa",
+        "outputId": "e4c79087-38aa-4f80-cd0f-20c232036db9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         }
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -295,7 +295,163 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_ac08f180-a42c-4d4d-a71b-f6bd382241fb\", \"routes.json\", 622844)"
+              "download(\"download_31693bd6-0a7a-40a1-8653-679dfcfa49f6\", \"routes.json\", 621146)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# making actual route\n",
+        "\n",
+        "import json\n",
+        "import random\n",
+        "import copy\n",
+        "\n",
+        "# Set seed\n",
+        "random.seed(2)\n",
+        "\n",
+        "# Read the JSON file\n",
+        "with open('cities.json', 'r') as file:\n",
+        "    data = json.load(file)\n",
+        "\n",
+        "# Extract city names\n",
+        "cities = [item['city'] for item in data]\n",
+        "\n",
+        "# Define merchandise types\n",
+        "merchandise_types = ['apple', 'tomatoes', 'butter', 'water', 'milk', 'pens', 'honey']\n",
+        "\n",
+        "with open('routes.json', 'r') as file:\n",
+        "    routes = json.load(file)\n",
+        "\n",
+        "act_routes = []\n",
+        "\n",
+        "for route in routes:\n",
+        "    if len(route['route']) < 2:\n",
+        "        continue  # Skip routes with less than two cities\n",
+        "\n",
+        "    for _ in range(10):\n",
+        "        act_route = copy.deepcopy(route)  # Use deepcopy to avoid modifying the original route\n",
+        "\n",
+        "        # Randomly select a city to modify\n",
+        "        modified_city_index = random.randint(0, len(act_route['route']) - 1)\n",
+        "        modified_city = act_route['route'][modified_city_index]\n",
+        "\n",
+        "        # Randomly decide whether to modify city\n",
+        "        if random.choice([True, False]):\n",
+        "            # Modify the selected city\n",
+        "            new_city = random.choice(cities)\n",
+        "            modified_city['from'] = new_city\n",
+        "\n",
+        "            # If the modified city is the second city, modify it throughout the route\n",
+        "            if modified_city_index == 1:\n",
+        "                # Replace the modified city with a new city\n",
+        "                act_route['route'][modified_city_index]['from'] = new_city\n",
+        "                # Connect the cities before and after the replaced city\n",
+        "                act_route['route'][modified_city_index - 1]['to'] = new_city\n",
+        "                if modified_city_index + 1 < len(act_route['route']):\n",
+        "                    act_route['route'][modified_city_index]['to'] = act_route['route'][modified_city_index + 1]['from']\n",
+        "\n",
+        "        # Randomly modify merchandise\n",
+        "        for city_route in act_route['route']:\n",
+        "            # Select random merchandise types\n",
+        "            selected_merchandise = random.sample(merchandise_types, random.randint(1, len(merchandise_types)))\n",
+        "            # Assign random quantities to selected merchandise\n",
+        "            city_route['merchandise'] = {item: random.randint(1, 20) for item in selected_merchandise}\n",
+        "\n",
+        "        act_routes.append(act_route)\n",
+        "\n",
+        "# Write the act routes list to a new JSON file\n",
+        "with open('act_routes.json', 'w') as file:\n",
+        "    json.dump(act_routes, file, indent=4)"
+      ],
+      "metadata": {
+        "id": "CGJurVstWvbv"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Download routes\n",
+        "from google.colab import files\n",
+        "\n",
+        "files.download('act_routes.json')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "WOqkwzTkX1L5",
+        "outputId": "c6f06ce6-b840-4c63-81d8-da1dc89195fb"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_960cb50e-dcc4-4c53-b093-f267dc8a9801\", \"act_routes.json\", 6224452)"
             ]
           },
           "metadata": {}
