使用 Colaboratory 创建

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdj5CayaHfgFO7GBk/7hW7",
+      "authorship_tag": "ABX9TyO09w1u11m1BcDnc6jyFHrl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -220,10 +220,80 @@
         "# files.download('routes.json')\n"
       ],
       "metadata": {
-        "id": "uNZs3ShmVCAl"
+        "id": "uNZs3ShmVCAl",
+        "outputId": "a4c10e12-7bc7-475a-806b-618f9e619119",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
       },
-      "execution_count": 5,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_268d3b62-8a31-43c1-ad30-1172d9cfa988\", \"routes.json\", 618314)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -301,14 +371,84 @@
       "cell_type": "code",
       "source": [
         "# Download the actual routes\n",
-        "#from google.colab import files\n",
-        "#files.download('act_routes.json')"
+        "# from google.colab import files\n",
+        "# files.download('act_routes.json')"
       ],
       "metadata": {
-        "id": "WOqkwzTkX1L5"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "WOqkwzTkX1L5",
+        "outputId": "04b9add6-5297-4e83-c6c2-8d4e28ace5ed"
       },
-      "execution_count": 7,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_3ba01301-9c7b-479a-9357-7cf8db67f080\", \"act_routes.json\", 6178665)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -317,29 +457,35 @@
         "import json\n",
         "from Levenshtein import distance\n",
         "\n",
+        "# Function for calculating route edit distance similarity\n",
         "def calculate_similarity(route1, route2):\n",
         "    lev_distance = distance(route1, route2)\n",
         "    max_length = max(len(route1), len(route2))\n",
         "    similarity = 1 - lev_distance / max_length\n",
         "    return similarity\n",
         "\n",
+        "# Function for calculating marchandise edit distance similarity\n",
         "def calculate_merchandise_similarity(merch1, merch2):\n",
         "    lev_distance = distance(merch1, merch2)\n",
         "    max_length = max(len(merch1), len(merch2))\n",
         "    similarity = 1 - lev_distance / max_length\n",
         "    return similarity\n",
         "\n",
+        "# open standard route file\n",
         "with open('routes.json', 'r') as file:\n",
         "    routes = json.load(file)\n",
         "\n",
+        "# open actual route file\n",
         "with open('act_routes.json', 'r') as file:\n",
         "    act_routes = json.load(file)\n",
         "\n",
-        "act_route = act_routes[11]['route']\n",
+        "# select a actual route\n",
+        "act_route = act_routes[12]['route']\n",
         "act_route_str = ' '.join([f\"{route['from']} {route['to']}\" for route in act_route])\n",
         "\n",
         "similarities = []\n",
         "\n",
+        "# route similarity calculating\n",
         "for standard_route in routes:\n",
         "    standard_route_id = standard_route['id']\n",
         "    standard_route = standard_route['route']\n",
@@ -347,6 +493,7 @@
         "\n",
         "    route_similarity = calculate_similarity(standard_route_str, act_route_str)\n",
         "\n",
+        "    # merchandise similarity calculating\n",
         "    merchandise_similarity = 0\n",
         "    for i, route in enumerate(act_route):\n",
         "        act_merchandise = route['merchandise']\n",
@@ -354,10 +501,14 @@
         "        merchandise_similarity += calculate_merchandise_similarity(str(standard_merchandise), str(act_merchandise))\n",
         "    merchandise_similarity /= len(standard_route)\n",
         "\n",
+        "    #total similarity calculating\n",
         "    total_similarity = (route_similarity + merchandise_similarity) / 2\n",
         "    similarities.append((standard_route_id, total_similarity))\n",
         "\n",
+        "# sort the max similarity\n",
         "similarities = sorted(similarities, key=lambda x: x[1], reverse=True)\n",
+        "\n",
+        "# Find the most similar route\n",
         "max_similarity = similarities[0]\n",
         "\n",
         "print(f\"Max similarity: Route {max_similarity[0]} with similarity {max_similarity[1]}\")\n"
@@ -367,9 +518,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "irBKCcqrvyX6",
-        "outputId": "b69484c4-d276-4530-a35c-20a8644b5913"
+        "outputId": "6ba3d085-560f-4949-e47a-065b0db137f9"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,7 +529,7 @@
             "Requirement already satisfied: python-Levenshtein in /usr/local/lib/python3.10/dist-packages (0.21.1)\n",
             "Requirement already satisfied: Levenshtein==0.21.1 in /usr/local/lib/python3.10/dist-packages (from python-Levenshtein) (0.21.1)\n",
             "Requirement already satisfied: rapidfuzz<4.0.0,>=2.3.0 in /usr/local/lib/python3.10/dist-packages (from Levenshtein==0.21.1->python-Levenshtein) (3.1.1)\n",
-            "Max similarity: Route 1 with similarity 0.6684228473998295\n"
+            "Max similarity: Route 1 with similarity 0.7155681944909111\n"
           ]
         }
       ]
