使用 Colaboratory 创建

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOP5j1Kcp3N4lbcf7GNRFQa",
+      "authorship_tag": "ABX9TyNGjR5o8Orcm3NeoaqWjkbf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5620,6 +5620,102 @@
             "Max similarity for actual route 999-8: Standard Route 999 with similarity 0.7382903981264637\n",
             "Max similarity for actual route 999-9: Standard Route 374 with similarity 0.5988095238095238\n",
             "Max similarity for actual route 999-10: Standard Route 999 with similarity 0.7151162790697674\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "from collections import defaultdict\n",
+        "from Levenshtein import distance\n",
+        "\n",
+        "# Function for calculating route edit distance similarity\n",
+        "def calculate_similarity(route1, route2):\n",
+        "    lev_distance = distance(route1, route2)\n",
+        "    max_length = max(len(route1), len(route2))\n",
+        "    similarity = 1 - lev_distance / max_length\n",
+        "    return similarity\n",
+        "\n",
+        "# Function for calculating marchandise edit distance similarity\n",
+        "def calculate_merchandise_similarity(merch1, merch2):\n",
+        "    lev_distance = distance(merch1, merch2)\n",
+        "    max_length = max(len(merch1), len(merch2))\n",
+        "    similarity = 1 - lev_distance / max_length\n",
+        "    return similarity\n",
+        "\n",
+        "# open standard route file\n",
+        "with open('routes.json', 'r') as file:\n",
+        "    routes = json.load(file)\n",
+        "\n",
+        "# open actual route file\n",
+        "with open('act_routes.json', 'r') as file:\n",
+        "    act_routes = json.load(file)\n",
+        "\n",
+        "# Create a dictionary to store the most similar route for each actual route\n",
+        "most_similar_routes = defaultdict(list)\n",
+        "\n",
+        "# Correct prediction counter\n",
+        "correct_predictions = 0\n",
+        "\n",
+        "# Iterate through all actual routes\n",
+        "for act_route in act_routes:\n",
+        "    act_route_id = act_route['id']\n",
+        "    act_route_str = ' '.join([f\"{route['from']} {route['to']}\" for route in act_route['route']])\n",
+        "\n",
+        "    similarities = []\n",
+        "\n",
+        "    # route similarity calculating\n",
+        "    for standard_route in routes:\n",
+        "        standard_route_id = standard_route['id']\n",
+        "        standard_route_str = ' '.join([f\"{route['from']} {route['to']}\" for route in standard_route['route']])\n",
+        "\n",
+        "        route_similarity = calculate_similarity(standard_route_str, act_route_str)\n",
+        "\n",
+        "        # merchandise similarity calculating\n",
+        "        merchandise_similarity = 0\n",
+        "        for i, route in enumerate(act_route['route']):\n",
+        "            act_merchandise = route['merchandise']\n",
+        "            standard_merchandise = standard_route['route'][0]['merchandise']\n",
+        "            merchandise_similarity += calculate_merchandise_similarity(str(standard_merchandise), str(act_merchandise))\n",
+        "        merchandise_similarity /= len(standard_route['route'])\n",
+        "\n",
+        "        #total similarity calculating\n",
+        "        total_similarity = (route_similarity + merchandise_similarity) / 2\n",
+        "        similarities.append((standard_route_id, total_similarity))\n",
+        "\n",
+        "    # sort the max similarity\n",
+        "    similarities = sorted(similarities, key=lambda x: x[1], reverse=True)\n",
+        "\n",
+        "    # Find the most similar route\n",
+        "    max_similarity = similarities[0]\n",
+        "\n",
+        "    # Store the most similar route for this actual route\n",
+        "    most_similar_routes[act_route_id].append(max_similarity)\n",
+        "\n",
+        "    # If the actual route id is the same as the predicted route id, increment the correct prediction counter\n",
+        "    if act_route_id == max_similarity[0]:\n",
+        "        correct_predictions += 1\n",
+        "\n",
+        "# Calculate and print the prediction accuracy\n",
+        "accuracy = correct_predictions / len(act_routes)\n",
+        "print(f\"Prediction accuracy: {accuracy * 100}%\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AeIBrl4eoadB",
+        "outputId": "0bfff0b1-3b71-4976-b16c-2a81a1878f66"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prediction accuracy: 82.38%\n"
           ]
         }
       ]
