--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbtC0ZYEKeVzry9RBvBNzu",
+      "authorship_tag": "ABX9TyO2MdY+KWIcUIXvOK9XwE41",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -371,52 +371,210 @@
     {
       "cell_type": "code",
       "source": [
-        "from pyspark.sql.functions import udf\n",
-        "from pyspark.sql.types import FloatType\n",
+        "# Convert 'standard routes' file to Spark DataFrame\n",
+        "import pandas as pd\n",
+        "import json\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")\n",
         "\n",
-        "# Create Spark Session\n",
-        "spark = SparkSession.builder.appName('RouteSimilarity').getOrCreate()\n",
+        "# Load data from JSON file\n",
+        "with open('routes.json', 'r') as file:\n",
+        "    data = json.load(file)\n",
         "\n",
-        "# Load data\n",
-        "routes_df = spark.read.json('routes.json')\n",
-        "act_routes_df = spark.read.json('act_routes.json')\n"
+        "# Initialize an empty DataFrame to store the processed data\n",
+        "df = pd.DataFrame()\n",
+        "\n",
+        "# Iterate over each element\n",
+        "for element in data:\n",
+        "  id = element['id']\n",
+        "\n",
+        "# Iterate over routes\n",
+        "  for route in element['route']:\n",
+        "    from_city = route['from']\n",
+        "    to_city = route['to']\n",
+        "\n",
+        "    # Iterate over merchandise\n",
+        "    for merchandise, quantity in route['merchandise'].items():\n",
+        "        # Append data to DataFrame\n",
+        "        df = df.append({\n",
+        "            'id': id,\n",
+        "            'from': from_city,\n",
+        "            'to': to_city,\n",
+        "            'merchandise': merchandise,\n",
+        "            'quantity': quantity\n",
+        "        }, ignore_index=True)\n",
+        "\n",
+        "# Convert DataFrame to Spark DataFrame\n",
+        "st_routes_df = spark.createDataFrame(df)"
+      ],
+      "metadata": {
+        "id": "uoS_LRqHXCNl"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "st_routes_df.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZMr0jCHPglGM",
+        "outputId": "048b5c5c-390d-4e70-ba56-c98840618239"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+------------+------------+-----------+--------+\n",
+            "| id|        from|          to|merchandise|quantity|\n",
+            "+---+------------+------------+-----------+--------+\n",
+            "|  0|     Helmond| Schoonhoven|      water|       4|\n",
+            "|  0|     Helmond| Schoonhoven|      honey|       2|\n",
+            "|  0|     Helmond| Schoonhoven|       pens|       1|\n",
+            "|  0| Schoonhoven|     Zaandam|      water|       4|\n",
+            "|  0| Schoonhoven|     Zaandam|      honey|       1|\n",
+            "|  0| Schoonhoven|     Zaandam|       pens|       4|\n",
+            "|  1|      Nuenen|Klazienaveen|       pens|       6|\n",
+            "|  1|      Nuenen|Klazienaveen|   tomatoes|       1|\n",
+            "|  1|      Nuenen|Klazienaveen|       milk|       1|\n",
+            "|  1|      Nuenen|Klazienaveen|      apple|       1|\n",
+            "|  1|Klazienaveen|   The Hague|       pens|       1|\n",
+            "|  1|Klazienaveen|   The Hague|   tomatoes|       7|\n",
+            "|  1|Klazienaveen|   The Hague|       milk|       4|\n",
+            "|  1|Klazienaveen|   The Hague|      apple|       7|\n",
+            "|  2|    Enschede|   Harlingen|       milk|       4|\n",
+            "|  2|    Enschede|   Harlingen|   tomatoes|       8|\n",
+            "|  2|    Enschede|   Harlingen|     butter|       5|\n",
+            "|  2|    Enschede|   Harlingen|       pens|       1|\n",
+            "|  2|   Harlingen|      Venray|       milk|       7|\n",
+            "|  2|   Harlingen|      Venray|   tomatoes|       2|\n",
+            "+---+------------+------------+-----------+--------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import json\n",
+        "from pyspark.sql import SparkSession\n",
+        "from pyspark.sql.functions import monotonically_increasing_id\n",
+        "\n",
+        "# Load data from JSON file\n",
+        "with open('act_routes.json', 'r') as file:\n",
+        "    data = json.load(file)\n",
+        "\n",
+        "# Initialize an empty DataFrame to store the processed data\n",
+        "df = pd.DataFrame()\n",
+        "\n",
+        "# Dictionary to store the counter for each unique ID\n",
+        "id_counter = {}\n",
+        "\n",
+        "# Iterate over each element\n",
+        "for element in data:\n",
+        "    id = element['id']\n",
+        "\n",
+        "    # Increment the counter for each unique ID\n",
+        "    if id in id_counter:\n",
+        "        id_counter[id] += 1\n",
+        "    else:\n",
+        "        id_counter[id] = 1\n",
+        "\n",
+        "    # Counter for each ID\n",
+        "    counter = id_counter[id]\n",
+        "\n",
+        "    # Iterate over routes\n",
+        "    for route in element['route']:\n",
+        "        from_city = route['from']\n",
+        "        to_city = route['to']\n",
+        "\n",
+        "        # Iterate over merchandise\n",
+        "        for merchandise, quantity in route['merchandise'].items():\n",
+        "            # Append data to DataFrame with modified ID\n",
+        "            df = df.append({\n",
+        "                'id': f\"{id}-{counter}\",  # Assign modified ID with counter\n",
+        "                'original_id': id,  # Store original ID\n",
+        "                'from': from_city,\n",
+        "                'to': to_city,\n",
+        "                'merchandise': merchandise,\n",
+        "                'quantity': quantity\n",
+        "            }, ignore_index=True)\n",
+        "\n",
+        "# Convert DataFrame to Spark DataFrame\n",
+        "spark = SparkSession.builder.getOrCreate()\n",
+        "ac_routes_df = spark.createDataFrame(df)\n",
+        "\n",
+        "# Assign sequential counts to duplicate IDs\n",
+        "ac_routes_df = ac_routes_df.withColumn('new_id', monotonically_increasing_id())\n",
+        "\n",
+        "# Show the resulting DataFrame\n",
+        "ac_routes_df.show()\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EpXKTrpdhTib",
+        "outputId": "9cabd45d-367a-48b6-e6a9-028d245033c0"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----------+-----------+-----------+-----------+--------+------+\n",
+            "| id|original_id|       from|         to|merchandise|quantity|new_id|\n",
+            "+---+-----------+-----------+-----------+-----------+--------+------+\n",
+            "|0-1|          0|Barendrecht|Schoonhoven|      honey|       3|     0|\n",
+            "|0-1|          0|Barendrecht|Schoonhoven|   tomatoes|       5|     1|\n",
+            "|0-1|          0|Barendrecht|Schoonhoven|     butter|       2|     2|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|      apple|       4|     3|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|       milk|       5|     4|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|   tomatoes|       3|     5|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|      water|       5|     6|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|     butter|       4|     7|\n",
+            "|0-2|          0|    Helmond|   Enschede|      water|       4|     8|\n",
+            "|0-2|          0|    Helmond|   Enschede|     butter|       5|     9|\n",
+            "|0-2|          0|    Helmond|   Enschede|      honey|       2|    10|\n",
+            "|0-2|          0|   Enschede|    Zaandam|   tomatoes|       3|    11|\n",
+            "|0-2|          0|   Enschede|    Zaandam|      honey|       2|    12|\n",
+            "|0-2|          0|   Enschede|    Zaandam|       pens|       2|    13|\n",
+            "|0-2|          0|   Enschede|    Zaandam|      apple|       5|    14|\n",
+            "|0-2|          0|   Enschede|    Zaandam|      water|       5|    15|\n",
+            "|0-3|          0|    Helmond|   Nootdorp|      water|       4|    16|\n",
+            "|0-3|          0|    Helmond|   Nootdorp|       pens|       2|    17|\n",
+            "|0-3|          0|    Helmond|   Nootdorp|       milk|       4|    18|\n",
+            "|0-3|          0|    Helmond|   Nootdorp|     butter|       4|    19|\n",
+            "+---+-----------+-----------+-----------+-----------+--------+------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
       ],
       "metadata": {
         "id": "5jcEdj7rKeBB"
       },
       "execution_count": 10,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "routes_df.show()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 436
-        },
-        "id": "QWIseYj0Q0LR",
-        "outputId": "48ae76d9-3974-40f8-afeb-b035540db530"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AnalysisException",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-082a9af15db3>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mroutes_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pyspark/sql/dataframe.py\u001b[0m in \u001b[0;36mshow\u001b[0;34m(self, n, truncate, vertical)\u001b[0m\n\u001b[1;32m    897\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    898\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtruncate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbool\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtruncate\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 899\u001b[0;31m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshowString\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvertical\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    900\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    901\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1320\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1321\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1322\u001b[0;31m         return_value = get_return_value(\n\u001b[0m\u001b[1;32m   1323\u001b[0m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[1;32m   1324\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pyspark/errors/exceptions/captured.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    173\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mconverted\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAnalysisException\u001b[0m: Since Spark 2.3, the queries from raw JSON/CSV files are disallowed when the\nreferenced columns only include the internal corrupt record column\n(named _corrupt_record by default). For example:\nspark.read.schema(schema).csv(file).filter($\"_corrupt_record\".isNotNull).count()\nand spark.read.schema(schema).csv(file).select(\"_corrupt_record\").show().\nInstead, you can cache or save the parsed results and then send the same query.\nFor example, val df = spark.read.schema(schema).csv(file).cache() and then\ndf.filter($\"_corrupt_record\".isNotNull).count()."
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
