使用 Colaboratory 创建

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2MdY+KWIcUIXvOK9XwE41",
+      "authorship_tag": "ABX9TyMQTklO47jxcoK1SnM61tET",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -416,45 +416,51 @@
     {
       "cell_type": "code",
       "source": [
-        "st_routes_df.show()"
+        "from pyspark.sql.functions import expr\n",
+        "\n",
+        "# Create a new column that is the merchandise column value repeated quantity times\n",
+        "str_df = st_routes_df.withColumn('merchandise_quantity', expr(\"repeat(merchandise, quantity)\"))\n",
+        "str_df = str_df.drop('merchandise','quantity')\n",
+        "\n",
+        "str_df.show()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ZMr0jCHPglGM",
-        "outputId": "048b5c5c-390d-4e70-ba56-c98840618239"
+        "id": "Da0fAyHq0Q4J",
+        "outputId": "7c840abc-ba24-479b-ca2c-f803e72e95a2"
       },
-      "execution_count": 19,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---+------------+------------+-----------+--------+\n",
-            "| id|        from|          to|merchandise|quantity|\n",
-            "+---+------------+------------+-----------+--------+\n",
-            "|  0|     Helmond| Schoonhoven|      water|       4|\n",
-            "|  0|     Helmond| Schoonhoven|      honey|       2|\n",
-            "|  0|     Helmond| Schoonhoven|       pens|       1|\n",
-            "|  0| Schoonhoven|     Zaandam|      water|       4|\n",
-            "|  0| Schoonhoven|     Zaandam|      honey|       1|\n",
-            "|  0| Schoonhoven|     Zaandam|       pens|       4|\n",
-            "|  1|      Nuenen|Klazienaveen|       pens|       6|\n",
-            "|  1|      Nuenen|Klazienaveen|   tomatoes|       1|\n",
-            "|  1|      Nuenen|Klazienaveen|       milk|       1|\n",
-            "|  1|      Nuenen|Klazienaveen|      apple|       1|\n",
-            "|  1|Klazienaveen|   The Hague|       pens|       1|\n",
-            "|  1|Klazienaveen|   The Hague|   tomatoes|       7|\n",
-            "|  1|Klazienaveen|   The Hague|       milk|       4|\n",
-            "|  1|Klazienaveen|   The Hague|      apple|       7|\n",
-            "|  2|    Enschede|   Harlingen|       milk|       4|\n",
-            "|  2|    Enschede|   Harlingen|   tomatoes|       8|\n",
-            "|  2|    Enschede|   Harlingen|     butter|       5|\n",
-            "|  2|    Enschede|   Harlingen|       pens|       1|\n",
-            "|  2|   Harlingen|      Venray|       milk|       7|\n",
-            "|  2|   Harlingen|      Venray|   tomatoes|       2|\n",
-            "+---+------------+------------+-----------+--------+\n",
+            "+---+------------+------------+--------------------+\n",
+            "| id|        from|          to|merchandise_quantity|\n",
+            "+---+------------+------------+--------------------+\n",
+            "|  0|     Helmond| Schoonhoven|waterwaterwaterwater|\n",
+            "|  0|     Helmond| Schoonhoven|          honeyhoney|\n",
+            "|  0|     Helmond| Schoonhoven|                pens|\n",
+            "|  0| Schoonhoven|     Zaandam|waterwaterwaterwater|\n",
+            "|  0| Schoonhoven|     Zaandam|               honey|\n",
+            "|  0| Schoonhoven|     Zaandam|    penspenspenspens|\n",
+            "|  1|      Nuenen|Klazienaveen|penspenspenspensp...|\n",
+            "|  1|      Nuenen|Klazienaveen|            tomatoes|\n",
+            "|  1|      Nuenen|Klazienaveen|                milk|\n",
+            "|  1|      Nuenen|Klazienaveen|               apple|\n",
+            "|  1|Klazienaveen|   The Hague|                pens|\n",
+            "|  1|Klazienaveen|   The Hague|tomatoestomatoest...|\n",
+            "|  1|Klazienaveen|   The Hague|    milkmilkmilkmilk|\n",
+            "|  1|Klazienaveen|   The Hague|appleappleappleap...|\n",
+            "|  2|    Enschede|   Harlingen|    milkmilkmilkmilk|\n",
+            "|  2|    Enschede|   Harlingen|tomatoestomatoest...|\n",
+            "|  2|    Enschede|   Harlingen|butterbutterbutte...|\n",
+            "|  2|    Enschede|   Harlingen|                pens|\n",
+            "|  2|   Harlingen|      Venray|milkmilkmilkmilkm...|\n",
+            "|  2|   Harlingen|      Venray|    tomatoestomatoes|\n",
+            "+---+------------+------------+--------------------+\n",
             "only showing top 20 rows\n",
             "\n"
           ]
@@ -514,13 +520,7 @@
         "ac_routes_df = spark.createDataFrame(df)\n",
         "\n",
         "# Assign sequential counts to duplicate IDs\n",
-        "ac_routes_df = ac_routes_df.withColumn('new_id', monotonically_increasing_id())\n",
-        "\n",
-        "# Show the resulting DataFrame\n",
-        "ac_routes_df.show()\n",
-        "\n",
-        "\n",
-        "\n"
+        "ac_routes_df = ac_routes_df.withColumn('new_id', monotonically_increasing_id())\n"
       ],
       "metadata": {
         "colab": {
@@ -568,13 +568,53 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "atr_df = ac_routes_df.withColumn('merchandise_quantity', expr(\"repeat(merchandise, quantity)\"))\n",
+        "atr_df = atr_df.drop('merchandise', 'quantity', 'new_id')\n",
+        "\n",
+        "atr_df.show()\n"
       ],
       "metadata": {
-        "id": "5jcEdj7rKeBB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5jcEdj7rKeBB",
+        "outputId": "d9857913-b8f4-405c-bc12-7d471676e2a6"
       },
-      "execution_count": 10,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----------+-----------+-----------+--------------------+\n",
+            "| id|original_id|       from|         to|merchandise_quantity|\n",
+            "+---+-----------+-----------+-----------+--------------------+\n",
+            "|0-1|          0|Barendrecht|Schoonhoven|     honeyhoneyhoney|\n",
+            "|0-1|          0|Barendrecht|Schoonhoven|tomatoestomatoest...|\n",
+            "|0-1|          0|Barendrecht|Schoonhoven|        butterbutter|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|appleappleappleapple|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|milkmilkmilkmilkmilk|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|tomatoestomatoest...|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|waterwaterwaterwa...|\n",
+            "|0-1|          0|Schoonhoven|    Zaandam|butterbutterbutte...|\n",
+            "|0-2|          0|    Helmond|   Enschede|waterwaterwaterwater|\n",
+            "|0-2|          0|    Helmond|   Enschede|butterbutterbutte...|\n",
+            "|0-2|          0|    Helmond|   Enschede|          honeyhoney|\n",
+            "|0-2|          0|   Enschede|    Zaandam|tomatoestomatoest...|\n",
+            "|0-2|          0|   Enschede|    Zaandam|          honeyhoney|\n",
+            "|0-2|          0|   Enschede|    Zaandam|            penspens|\n",
+            "|0-2|          0|   Enschede|    Zaandam|appleappleappleap...|\n",
+            "|0-2|          0|   Enschede|    Zaandam|waterwaterwaterwa...|\n",
+            "|0-3|          0|    Helmond|   Nootdorp|waterwaterwaterwater|\n",
+            "|0-3|          0|    Helmond|   Nootdorp|            penspens|\n",
+            "|0-3|          0|    Helmond|   Nootdorp|    milkmilkmilkmilk|\n",
+            "|0-3|          0|    Helmond|   Nootdorp|butterbutterbutte...|\n",
+            "+---+-----------+-----------+-----------+--------------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
