使用 Colaboratory 创建

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQTklO47jxcoK1SnM61tET",
+      "authorship_tag": "ABX9TyMhaUK+SdgUfKeLDLRzeNnJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -568,19 +568,19 @@
     {
       "cell_type": "code",
       "source": [
-        "atr_df = ac_routes_df.withColumn('merchandise_quantity', expr(\"repeat(merchandise, quantity)\"))\n",
-        "atr_df = atr_df.drop('merchandise', 'quantity', 'new_id')\n",
+        "acr_df = ac_routes_df.withColumn('merchandise_quantity', expr(\"repeat(merchandise, quantity)\"))\n",
+        "acr_df = acr_df.drop('merchandise', 'quantity', 'new_id')\n",
         "\n",
-        "atr_df.show()\n"
+        "acr_df.show()\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5jcEdj7rKeBB",
-        "outputId": "d9857913-b8f4-405c-bc12-7d471676e2a6"
+        "outputId": "c89d7c18-f73d-4cfa-9ea7-3d0691011129"
       },
-      "execution_count": 36,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,45 +619,70 @@
     {
       "cell_type": "code",
       "source": [
-        "#Edit distance calculation\n",
-        "# Create a new SparkContext\n",
-        "sc.stop()\n",
-        "sc = SparkContext(\"local\", \"RouteSimilarity\")\n",
+        "# delete the duplicated routes\n",
+        "acpaths = acr_df.dropDuplicates([\"id\", \"original_id\", \"from\", \"to\"])\n",
         "\n",
-        "# Load routes data\n",
-        "routes_rdd = sc.wholeTextFiles(\"routes.json\").flatMap(lambda x: json.loads(x[1]))\n",
-        "act_routes_rdd = sc.wholeTextFiles(\"act_routes.json\").flatMap(lambda x: json.loads(x[1]))\n",
-        "\n",
-        "# Parse JSON and extract relevant data\n",
-        "routes = routes_rdd.map(lambda x: x)\n",
-        "act_routes = act_routes_rdd.map(lambda x: x)\n",
-        "\n",
-        "\n",
-        "# Extract standard route\n",
-        "standard_route = routes.filter(lambda x: x['id'] == 0).map(lambda x: x['route'][0])\n",
-        "standard_route_str = ' '.join([f\"{route['from']} {route['to']}\" for route in standard_route.collect()])\n",
-        "\n",
-        "\n",
-        "# Compute similarity for each act_route\n",
-        "similarities = act_routes.flatMap(lambda x: x['route']).map(lambda x: (x['id'], x['route'])).map(lambda x: (x[0], ' '.join([f\"{route['from']} {route['to']}\" for route in x[1]]))) \\\n",
-        "    .map(lambda x: (x[0], calculate_similarity(standard_route_str, x[1]))) \\\n",
-        "    .reduceByKey(lambda x, y: (x*0.8 + y*0.2) / 2)\n",
-        "\n",
-        "# Compute similarity for route 1 only\n",
-        "similarity_1 = similarities.filter(lambda x: x[0] == 1)\n",
-        "\n",
-        "# Collect the result and print it\n",
-        "for x in similarity_1.collect():\n",
-        "    print(f\"Similarity for route {x[0]}: {x[1]}\")\n",
-        "\n",
-        "# Stop the SparkContext\n",
-        "sc.stop()\n",
-        "\n"
+        "acpaths.show()"
       ],
       "metadata": {
-        "id": "lADtR0vCYa45"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j7ZxDm_V8GkW",
+        "outputId": "eb3d683a-3ff7-4743-cad2-cfad4874872d"
       },
-      "execution_count": null,
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----------+-----------+-----------+--------------------+\n",
+            "|  id|original_id|       from|         to|merchandise_quantity|\n",
+            "+----+-----------+-----------+-----------+--------------------+\n",
+            "| 0-1|          0|Barendrecht|Schoonhoven|     honeyhoneyhoney|\n",
+            "| 0-1|          0|Schoonhoven|    Zaandam|appleappleappleapple|\n",
+            "|0-10|          0| Den Helder|Schoonhoven|          waterwater|\n",
+            "|0-10|          0|Schoonhoven|    Zaandam|    penspenspenspens|\n",
+            "| 0-2|          0|   Enschede|    Zaandam|tomatoestomatoest...|\n",
+            "| 0-2|          0|    Helmond|   Enschede|waterwaterwaterwater|\n",
+            "| 0-3|          0|    Helmond|   Nootdorp|waterwaterwaterwater|\n",
+            "| 0-3|          0|   Nootdorp|    Zaandam|     waterwaterwater|\n",
+            "| 0-4|          0|    Helmond|Schoonhoven|penspenspenspenspens|\n",
+            "| 0-4|          0|Schoonhoven|    Zaandam|honeyhoneyhoneyho...|\n",
+            "| 0-5|          0|    Helmond|Schoonhoven|tomatoestomatoest...|\n",
+            "| 0-5|          0|Schoonhoven|    Zaandam|appleappleappleap...|\n",
+            "| 0-6|          0| Amstelveen|    Zaandam|               apple|\n",
+            "| 0-6|          0|    Helmond| Amstelveen|              butter|\n",
+            "| 0-7|          0|    Helmond|Schoonhoven|tomatoestomatoest...|\n",
+            "| 0-7|          0|Schoonhoven|    Zaandam|     appleappleapple|\n",
+            "| 0-8|          0|     Bergen|    Zaandam|     appleappleapple|\n",
+            "| 0-8|          0|    Helmond|     Bergen|    milkmilkmilkmilk|\n",
+            "| 0-9|          0|    Helmond|Schoonhoven|     honeyhoneyhoney|\n",
+            "| 0-9|          0|Schoonhoven|    Zaandam|        penspenspens|\n",
+            "+----+-----------+-----------+-----------+--------------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.functions import udf\n",
+        "from pyspark.sql.types import IntegerType\n",
+        "from Levenshtein import distance\n",
+        "\n",
+        "def levenshtein_distance(s1, s2):\n",
+        "    return distance(s1, s2)\n",
+        "\n",
+        "levenshtein_distance_udf = udf(levenshtein_distance, IntegerType())\n"
+      ],
+      "metadata": {
+        "id": "B4TmnMW2BtIH"
+      },
+      "execution_count": 50,
       "outputs": []
     }
   ]
